# shadowfall-engine

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/include/core/: input-manager.h
engine/core/source/: input-manager.cc
engine/include/ecs/: archetype.h  component-base.h  component-collection.h  component.h  entitiy-collection.h  entitiy-relations.h  entity-collection.h  entity-id.h  entity-node.h  entity.h  tag-component.h
engine/source/: component-collection.cc  entity-collection.cc  entity-id.cc  entity-node.cc  entity.cc
game/: CMakeLists.txt  main.cc
testing/: CMakeLists.txt
testing/ecs/: CMakeLists.txt  archetype.cc  component-collection.cc  entity-id.cc
